fixes html layout issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,7 +114,7 @@ nav.filter-container {
   .clear-tags {
     background: none;
     border: none;
-    font-size: 1.25vw;
+    font-size: medium;
   }
 
   .random-recipe {
@@ -135,7 +135,7 @@ nav.filter-container {
     position: absolute;
     top: 5%;
     right: 5%;
-    font-size: 2vw;
+    font-size: 1.25vw;
     transform: translateY(-50%);
     border: none;
     background: transparent;
